# sobag-opt-site

./: .env.example  .gitignore  .vercelignore  README.md  about.html  admin-customer.html  admin-import.html  admin-order.html  admin-orders.html  admin-prices.html  admin-products.html  api-router.js  app.js  business.html  cart.html  cart.js  catalog.html  contacts.html  custom.html  delivery.html  favorites.html  how-to-order.html  index.html  marketplaces.html  package-lock.json  package.json  payment.html  privacy.html  quotes.html  returns.html  robots.txt  search.html  seller-support.html  server.mjs  sitemap.xml  styles.css  sw.js  terms.html  vercel.json  wholesale.html
api/: [...path].js  cart.js  catalog-detail.js  catalog-query.js  catalog.js  content.js  favorites.js  health.js  orders.js
components/: app-account.js  app-admin-loader.js  app-admin.js  app-content-utils.js  app-data.js  app-icons.js  app-product-utils.js  app-utils.js  app-xlsx.js  cart-data.js  cart-utils.js  site-shell.js
data/: products-live.json
docs/: README.md  access-audit.md  backend-pricing-reviews-contract.md  backend-security.md  cache-architecture.md  catalog-db-apply-plan.md  catalog-db-cutover-runbook.md  catalog-db-env-packet.md  catalog-postgres-source.md  catalog-server-api.md  cwv-field-apply-plan.md  cwv-field-audit-packet.md  deploy-checklist.md  (+28 more)
rust-server/: Cargo.toml
rust-server/src/: admin_audit.rs  admin_catalog.rs  admin_import_batches.rs  admin_media.rs  admin_pim.rs  admin_prices.rs  content_pages.rs  main.rs  ssr_tests.rs  store.rs  tests.rs
(+218 files in other folders)
